<resources>
    <string name="app_name">Fun Quiz</string>
    <string name="first_quiz">1、成语“咫尺天涯”中，“咫”，“尺”都是我国古代计量单位，那么哪个更长？</string>
    <string name="chi">尺</string>
    <string name="zhi">咫</string>
    <string name="second_quiz">2、《史记》中的“世家”是给什么人作的传？</string>
    <string name="noble">贵族</string>
    <string name="princes">诸侯王</string>
    <string name="king">皇帝</string>
    <string name="third_quiz">3、“司空见惯”中的“司空”是指？</string>
    <string name="tang_poet">唐代一位诗人</string>
    <string name="tang_seng">唐代一位高僧</string>
    <string name="tang_job">唐代一种官职</string>
    <string name="fourth_quiz">4、“使我不得开心颜”的上一句是？</string>
    <string name="cengjingcanghai">曾经沧海难为水</string>
    <string name="annengcuimei">安能摧眉折腰事权贵</string>
    <string name="andeguangsha">安得广厦千万间</string>
    <string name="wukenaihe">无可奈何花落去</string>
    <string name="fifth_quiz">5、五湖四海中包括下面些湖？</string>
    <string name="qinghaihu">青海湖</string>
    <string name="taihu">太湖</string>
    <string name="poyanghu">鄱阳湖</string>
    <string name="dongtinghu">洞庭湖</string>
    <string name="sixth_quiz">6、下列是吝啬鬼的是？</string>
    <string name="abagong">阿巴贡</string>
    <string name="xili">希礼</string>
    <string name="ganglangtai">葛朗台</string>
    <string name="yanjiansheng">严监生</string>
    <string name="submit_exam_paper">做完了，交卷</string>
    <string name="error_reason_below">错误题目的解析如下：</string>
    <string name="quiz_home_title">2018一站到底</string>
    <string name="seventh_quiz">7、（脑筋急转弯）26个字母哪两个听的人最多？</string>
    <string name="seventh_quiz_hint">请在此处填写答案</string>
    <string name="first_quiz_error_explain">1、 咫：周制八寸,合今制市尺六寸二分二厘，尺：一尺等于10寸，所以尺比咫大。\n</string>
    <string name="second_quiz_error_explain">2、 司马迁写作《史记》以“本纪”叙帝王，以“世家”载诸侯，以“列传”记人物，以“书”述典章制度，以“表”排列大事。\n</string>
    <string name="third_quiz_error_explain">3、 这个成语来自刘禹锡的诗《赠李司空妓》，“司空见惯浑闲事，断尽江南刺史肠。”司空指当时的诗人李绅，职位为司空，相当于明清两代的尚书。\n</string>
    <string name="fourth_quiz_error_explain">4、 李白《梦游天姥吟留别》中有“安能摧眉折腰事权贵，使我不得开心颜”。\n</string>
    <string name="fifth_quiz_error_explain">5、 五湖指洞庭湖、鄱阳湖、太湖、巢湖、洪泽湖。\n</string>
    <string name="sixth_quiz_error_exlain_sn">6、</string>
    <string name="sixth_quiz_error_explain_part_1">清代作家吴敬梓笔下的《儒林外史》严监生,</string>
    <string name="sixth_quiz_error_explain_part_2">法国作家巴尔扎克笔下的《欧也妮·葛朗台》葛朗台,</string>
    <string name="sixth_quiz_error_explain_part_3">法国作家莫里哀笔下的《吝啬鬼》阿巴贡\n</string>
    <string name="sixth_quiz_error_explain_full">6、 清代作家吴敬梓笔下的《儒林外史》严监生 法国作家巴尔扎克笔下的《欧也妮·葛朗台》葛朗台 法国作家莫里哀笔下的《吝啬鬼》阿巴贡\n</string>
    <string name="seventh_quiz_error_explain">7、 “CD”最多人听！\n</string>
    <string name="logo">logo</string>
    <plurals
        name="total_score_prefix">
        <item quantity="other">总分是：%d</item>
    </plurals>
</resources>
