<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.example.android.funquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/normal"
            android:layout_marginTop="@dimen/home_title_margin_top"
            android:layout_marginBottom="@dimen/home_title_margin_bottom"
            android:gravity="center_horizontal"
            android:text="@string/quiz_home_title"
            android:textSize="@dimen/home_title_text_size"/>

        <LinearLayout
            android:id="@+id/questions"
            style="@style/normal"
            android:orientation="vertical">

            <!--问题一-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">


                <RelativeLayout
                    style="@style/normal" >
                    <TextView
                        android:id="@+id/question_1"
                        style="@style/question_title"
                        android:text="@string/first_quiz"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_1"
                        android:orientation="vertical">
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/zhi" />
                        <RadioButton
                            android:id="@+id/question_1_answer"
                            style="@style/customRadioButton"
                            android:text="@string/chi"/>
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>

            <!--问题二-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">


                <RelativeLayout
                    style="@style/normal">
                    <TextView
                        android:id="@+id/question_2"
                        style="@style/question_title"
                        android:text="@string/second_quiz"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_2"
                        android:orientation="vertical">
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/king"/>
                        <RadioButton
                            android:id="@+id/question_2_answer"
                            style="@style/customRadioButton"
                            android:text="@string/princes"/>
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/noble"/>
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>

            <!--问题三-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/normal" >
                    <TextView
                        android:id="@+id/question_3"
                        style="@style/question_title"
                        android:text="@string/third_quiz" />
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_3"
                        android:orientation="vertical">
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/tang_poet" />
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/tang_seng"/>
                        <RadioButton
                            android:id="@+id/question_3_answer"
                            style="@style/customRadioButton"
                            android:text="@string/tang_job"/>
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>

            <!--问题四-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/normal" >
                    <TextView
                        android:id="@+id/question_4"
                        style="@style/question_title"
                        android:text="@string/fourth_quiz"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_4"
                        android:orientation="vertical">
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/wukenaihe"/>
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/andeguangsha"/>
                        <RadioButton
                            android:id="@+id/question_4_answer"
                            style="@style/customRadioButton"
                            android:text="@string/annengcuimei"/>
                        <RadioButton
                            style="@style/customRadioButton"
                            android:text="@string/cengjingcanghai"/>
                    </RadioGroup>
                </RelativeLayout>

            </LinearLayout>

            <!--问题五-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/normal" >

                    <TextView
                        android:id="@+id/question_5"
                        style="@style/question_title"
                        android:text="@string/fifth_quiz" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_5"
                        android:orientation="vertical">
                        <CheckBox
                            android:id="@+id/question_5_answer_1"
                            style="@style/customCheckBox"
                            android:text="@string/dongtinghu"/>
                        <CheckBox
                            android:id="@+id/question_5_answer_2"
                            style="@style/customCheckBox"
                            android:text="@string/poyanghu"/>
                        <CheckBox
                            android:id="@+id/question_5_answer_3"
                            style="@style/customCheckBox"
                            android:text="@string/taihu"/>
                        <CheckBox
                            android:id="@+id/question_5_answer_4"
                            style="@style/customCheckBox"
                            android:text="@string/qinghaihu"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

            <!--问题六-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/normal" >
                    <TextView
                        android:id="@+id/question_6"
                        style="@style/question_title"
                        android:text="@string/sixth_quiz"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_6"
                        android:orientation="vertical">
                        <CheckBox
                            android:id="@+id/question_6_answer_1"
                            style="@style/customCheckBox"
                            android:text="@string/yanjiansheng"/>
                        <CheckBox
                            android:id="@+id/question_6_answer_2"
                            style="@style/customCheckBox"
                            android:text="@string/ganglangtai"/>
                        <CheckBox
                            android:id="@+id/question_6_answer_3"
                            style="@style/customCheckBox"
                            android:text="@string/xili"/>
                        <CheckBox
                            android:id="@+id/question_6_answer_4"
                            style="@style/customCheckBox"
                            android:text="@string/abagong"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

            <!--问题七-->
            <LinearLayout
                style="@style/question_cards"
                android:orientation="vertical">

                <RelativeLayout
                    style="@style/normal">
                    <TextView
                        android:id="@+id/question_7"
                        style="@style/question_title"
                        android:text="@string/seventh_quiz"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/question_7"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/question_7_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/edit_text_padding_left"
                            android:hint="@string/seventh_quiz_hint"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/normal"
            android:text="@string/submit_exam_paper"
            android:textSize="@dimen/submit_button_text_size"
            android:onClick="calculateScore" />

        <LinearLayout
            android:id="@+id/judge"
            style="@style/normal"
            android:orientation="vertical"  >

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/little_margin_top_bottom"
                android:textSize="@dimen/second_level_font_size"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/background_dark"/>

            <TextView
                android:id="@+id/resultMessageTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/little_margin_top_bottom"
                android:text="@string/error_reason_below"
                android:textSize="@dimen/second_level_font_size"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/resultMessage"
                style="@style/normal"
                android:textSize="@dimen/third_level_font_size"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
